# email-server

./: .env.example  .gitignore  LICENSE  alembic.ini  main.py  pyproject.toml  run_consumer.py
src/: settings.py
src/alembic/: env.py
src/alembic/versions/: 2023_08_17_1959-b25daededd8d_.py
src/common/: collections.py  collections_tools.py
src/core/: di.py
src/core/domain/email/: commands.py  dto.py  services.py
src/core/domain/user/: __init__.py  commands.py  services.py
src/db/: base.py  types.py
src/db/models/: __init__.py  email.py  group.py  user.py
src/interfaces/api/: app.py  auth.py  schemas.py
src/interfaces/api/router/: __init__.py  _routers.py  email.py  users.py
src/interfaces/api/schemas/: __init__.py  base.py  schemas.py
src/interfaces/rabbit/: connection.py  consumer.py  publisher.py
