[project]
name = ""
version = ""
description = ""
authors = [
    {name = "maksyutov.vlad", email = "maksyutov.vlad@gmail.com"},
]
dependencies = [
    "pydantic>=2.0.3",
    "pydantic-settings>=2.0.2",
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.19",
    "alembic>=1.11.1",
    "aioinject>=0.9.1",
    "aio-pika>=9.1.4",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.4.1",
    "ruff>=0.0.278",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

follow_imports = "silent"
ignore_missing_imports = true
exclude = ['venv']
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

strict_optional = true
strict_equality = true


[tool.pdm.scripts]
lint = { composite = [
    "ruff check . --fix --show-fixes",
    "mypy ."
] }
